<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trackr</string>
    <string name="welcome">Welcome to Trackr!</string>
    <string name="action_settings">Settings</string>
    <string name="viewProfile">View Profile</string>
    <string name="startTrack">Start Tracking</string>
    <string name="timeZero">00:00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="back">Back</string>
    <string name="title_activity_track">Track Your Route</string>
    <string name="map">Map</string>
	<string name="latitute">Latitute: </string>
	<string name="longitutde">Longitutde: </string>
	<string name="speed">Speed: </string>
    <string name="altitude">Altitude: </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
