<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/toAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <fragment
        android:id="@+id/mapV"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/toAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/latitute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/longitutde"
        android:layout_below="@+id/mapV"
        android:layout_marginTop="20dp"
        android:text="@string/latitute" />

    <TextView
        android:id="@+id/longitutde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/latitute"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/longitutde" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/longitutde"
        android:layout_below="@+id/longitutde"
        android:layout_marginTop="20dp"
        android:text="@string/speed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/altitude"
        android:id="@+id/altitude"
        android:layout_below="@+id/speed"
        android:layout_alignLeft="@+id/speed"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@+id/speed" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Draw"
        android:id="@+id/button"
        android:layout_alignTop="@+id/latitute"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="36dp"
        android:onClick="onClick_draw" />

</RelativeLayout>